@@ -1,3 +1,8 @@
+2008-06-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>
+
+	* src/formats/xtcformat.cpp: make confs a std::vector too. Was double
+	*confs = new double[natoms * 3].
+
 2008-06-16  Chris Morley
 
 	* include/openbabel/oberror.h, src/oberror.cpp:
@@ -30,6 +35,7 @@
 	* windows-vc2005/gen3D/gen3D.vcproj,
 	windows-vc2005/OBMoreFormats/OBMoreFormats.vcproj: update
 
+>>>>>>> .r2589
 2008-06-15  Tim Vandermeersch <tim.vandermeersch@gmail.com>
 
 	* src/formats/cssrformat.cpp, src/formats/MCDLformat.cpp,
